# remembrall-pi

./: .gitignore  check_device.sh  create_credentials.sh  fetch-events.sh  pinout  pyproject.toml  run-remote.sh  run.sh
app/: check_device.py  create_credentials.py  fetch_events.py  interactive_test.py  main.py
app/lib/: calendar.py  color.py  config.py  controller.py  gpio_button_input_device.py  gpio_rgb_led_output_device.py  input_device.py  lifx_output_device.py  output_device.py  remembrall_device.py
env/: config.sample.toml  oauth-secrets.sample.json  tokens.sample.json
