[tool.poetry]
name = "remembrall-pi"
version = "0.1.0"
description = ""
authors = ["Elie Rotenberg <elie@rotenberg.io>"]

[tool.poetry.dependencies]
python = "^3.8"
gpiozero = "^1.6.2"
pigpio = "^1.78"
"RPi.GPIO" = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
