[tool.poetry]
name = "remembrall-pi"
version = "0.1.0"
description = ""
authors = ["Elie Rotenberg <elie@rotenberg.io>"]

[tool.poetry.dependencies]
python = "^3.8"
gpiozero = "^1.6.2"
pigpio = "^1.78"
"RPi.GPIO" = "^0.7.0"
pydantic = "^1.8.1"
toml = "^0.10.2"
google-api-python-client = "^2.2.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.4"
Flask = "^1.1.2"
requests = "^2.25.1"
lifxlan = "^1.2.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
